# earth_refraction

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
cpp/: CMakeLists.txt
cpp/include/refraction/: ciddor.hpp  constants.hpp  geodetic.hpp  interpolation.hpp  itu_r_p453.hpp  profile.hpp  ray_trace.hpp  ray_trace_batch.hpp  refraction.hpp  species.hpp  surface_anchor.hpp  water_vapor.hpp
cpp/include/refraction/atmosphere/: nrlmsis21.hpp  nrlmsis21_parm.hpp
cpp/include/refraction/ocean/: chen_millero.hpp  del_grosso.hpp  iapws_r9_97.hpp  mackenzie.hpp  meissner_wentz.hpp  millard_seaver.hpp  ocean_profile.hpp  ocean_refraction.hpp  quan_fry.hpp  sound_speed.hpp
cpp/tests/: CMakeLists.txt  dump_reference.cpp  test_chen_millero.cpp  test_ciddor.cpp  test_del_grosso.cpp  test_fixtures.hpp  test_geodetic.cpp  test_itu.cpp  test_mackenzie.cpp  test_meissner_wentz.cpp  test_millard_seaver.cpp  test_nrlmsis.cpp  test_ocean_profile.cpp  test_ocean_refraction.cpp  test_profile.cpp  test_ray_trace.cpp  test_sound_speed.cpp  test_species.cpp  test_surface_anchor.cpp  test_utils.hpp  test_water_vapor.cpp
python/nanobind/: CMakeLists.txt  refraction_native.cpp
python/src/refraction/: __init__.py  ciddor.py  constants.py  geodetic.py  itu_r_p453.py  native.py  profile.py  ray_trace.py  species.py  surface_anchor.py  water_vapor.py
python/src/refraction/atmosphere/: __init__.py  _nrlmsis21_parm.py  nrlmsis21.py
python/src/refraction/ocean/: __init__.py  chen_millero.py  del_grosso.py  iapws_r9_97.py  mackenzie.py  meissner_wentz.py  millard_seaver.py  ocean_profile.py  ocean_refraction.py  quan_fry.py  sound_speed.py
python/tests/: conftest.py  test_chen_millero.py  test_ciddor.py  test_del_grosso.py  test_geodetic.py  test_iapws_r9_97.py  test_itu.py  test_mackenzie.py  test_meissner_wentz.py  test_millard_seaver.py  test_native.py  test_nrlmsis.py  test_ocean_profile.py  test_ocean_refraction.py  test_profile.py  test_quan_fry.py  test_ray_trace.py  test_sound_speed.py  test_species.py  test_surface_anchor.py  test_water_vapor.py
